# portfolio-daily-brief

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
data/: value_chains.yaml
output/archive/: 2026-05-04.html  2026-05-05.html  2026-05-06.html  2026-05-07.html  2026-05-08.html  2026-05-11.html  2026-05-12.html  2026-05-13.html  2026-05-14.html  2026-05-15.html  2026-05-18.html  2026-05-19.html  2026-05-20.html
scripts/: fetch_news.py  fetch_portfolio.py  generate_brief.py  main.py  render.py
templates/: brief.html.j2
