[project]
name = "portfolio-daily-brief"
version = "0.1.0"
description = "보유 종목 + 밸류체인 대장주 뉴스를 매일 자동 발행하는 GitHub Pages 사이트"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.11",
    "holidays>=0.50",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
